# http-fp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/http_client/: __init__.py  client.py  config.py  retry.py  session.py
src/http_client/fingerprint/: __init__.py  akamai.py  ja3.py  profile.py  user_agent.py
tests/: conftest.py  test_client.py  test_fingerprint.py
