[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-fp"
version = "0.1.0"
description = "HTTP client with JA3/Akamai fingerprint support for realistic browser requests."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BotWitter"}
]
keywords = ["http", "client", "fingerprint", "ja3", "akamai", "curl-cffi", "tls", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "curl-cffi>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BotWitter/http-fp"
Repository = "https://github.com/BotWitter/http-fp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"http_client" = ["py.typed"]
